update modal styles to prevent horizontal scroll. update soleimani to use gif

--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -61,7 +61,8 @@ button {
   background-color: black;
   color: white;
   padding: 50px 30px 30px;
-  width: 95%;
+  width: 100vw;
+  box-sizing: border-box;
   margin: 0;
   .anti-modal-closer {
     font-size: 50pt;
